--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Juno"
 description              : "An amazing website."
-url                      : "https://biz-sharp.github.io"
+url                      : "https://gen-bi.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/biz-sharp/biz-sharp.github.io"
+repository               : "https://github.com/gen-bi/gen-bi.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -124,7 +124,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/biz-sharp"
+      url: "https://github.com/gen-bi"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -140,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/biz-sharp"
+      url: "https://github.com/gen-bi"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
