--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Juno"
   avatar           : "/assets/images/juno.jpg"
-  bio              : "💻 keep studying 📜"
+  bio              : "💻 keep going 📜"
   location         : "Korea"
   email            :
   links:
